// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders colored progress bar 1`] = `
<View
  accessibilityRole="progressbar"
  accessibilityState={
    {
      "busy": true,
    }
  }
  accessibilityValue={
    {
      "max": 100,
      "min": 0,
      "now": 20,
    }
  }
  accessible={true}
  onLayout={[Function]}
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgb(240, 224, 208)",
        "height": 6.285714285714286,
        "opacity": 0,
        "overflow": "hidden",
      }
    }
  />
</View>
`;

exports[`renders hidden progress bar 1`] = `
<View
  accessibilityRole="progressbar"
  accessibilityState={
    {
      "busy": false,
    }
  }
  accessibilityValue={
    {
      "max": 100,
      "min": 0,
      "now": 20,
    }
  }
  accessible={true}
  onLayout={[Function]}
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgb(240, 224, 208)",
        "height": 6.285714285714286,
        "opacity": 0,
        "overflow": "hidden",
      }
    }
  />
</View>
`;

exports[`renders indeterminate progress bar 1`] = `
<View
  accessibilityRole="progressbar"
  accessibilityState={
    {
      "busy": true,
    }
  }
  accessibilityValue={{}}
  accessible={true}
  onLayout={[Function]}
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgb(240, 224, 208)",
        "height": 6.285714285714286,
        "opacity": 0,
        "overflow": "hidden",
      }
    }
  />
</View>
`;

exports[`renders progress bar with specific progress 1`] = `
<View
  accessibilityRole="progressbar"
  accessibilityState={
    {
      "busy": true,
    }
  }
  accessibilityValue={
    {
      "max": 100,
      "min": 0,
      "now": 20,
    }
  }
  accessible={true}
  onLayout={[Function]}
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgb(240, 224, 208)",
        "height": 6.285714285714286,
        "opacity": 0,
        "overflow": "hidden",
      }
    }
  />
</View>
`;
